# mixEncodingsInC

./: CMakeLists.txt  README.md  example_utf-8.txt  main.c  main.cpp
